fixtures/errors/atomics_wrong_type.js
Atomics.load(new Float32Array(new SharedArrayBuffer(4)), 0);
